Add new grid button and center all the elements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <h1>Etch A Sketch</h1>
+      <button class="new-grid-btn">NEW GRID</button>
       <div class="grid-container"></div>
     </div>
   </body>
